...
    }

    override func isLoaded() -> Bool { bannerView != nil }

    override func load(_ ctx: AMBContext) {
        if bannerView == nil {
            let banner = makeBanner(options.optAdSize())
            banner.delegate = self
            banner.adSizeDelegate = self
            banner.rootViewController = plugin?.viewController
            banner.adUnitID = adUnitId
            banner.paidEventHandler = { [weak self, weak banner] value in
                self?.emitPaid(value, response: banner?.responseInfo)
...
